language-selector (0.70) UNRELEASED; urgency=low

  * Port to Python 3:
    - Use Python 3-style print functions.
    - Use "except Exception as e" syntax rather than the old-style "except
      Exception, e".
    - Use "raise Exception(value)" syntax rather than the old-style "raise
      Exception, value".
    - Use list comprehensions rather than filter.
    - Use new-style octal literals.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 07 May 2012 16:13:22 +0100

language-selector (0.69) precise; urgency=low

  * LanguageSelector/LocaleInfo.py, getUserDefaultLanguage(): Fix crash if
    system D-BUS is not running, which happens when running fontconfig-voodoo
    from casper. (LP: #856975)
  * debian/control: "Ubuntu Linux" → "Ubuntu". (LP: #919972)
  * data/pkg_depends: Move mozvoikko to xul-ext-mozvoikko.
  * data/pkg_depends: gedit and sylpheed use libenchant now, move these from
    aspell to hunspell dictionaries.
  * Close window on "Esc". (LP: #614933)
  * LanguageSelector/gtk/GtkLanguageSelector.py: Intercept errors from
    aptdaemon transactions and stop waiting for the transaction to finish on
    an error. (LP: #863875)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 09 Feb 2012 14:41:43 +0100

language-selector (0.68) precise; urgency=low

  * LanguageSelector/qt/QtLanguageSelector.py: Erroneous for loops
    replaced with simple variable assignments (LP: #926824).

 -- Gunnar Hjalmarsson <ubuntu@gunnar.cc>  Wed, 08 Feb 2012 06:15:31 +0100

language-selector (0.67) precise; urgency=low

  * LanguageSelector/gtk/GtkLanguageSelector.py: Remove call for the
    dropped function verify_no_unexpected_changes() (LP: #927814).

 -- Gunnar Hjalmarsson <ubuntu@gunnar.cc>  Tue, 07 Feb 2012 08:33:33 +0100

language-selector (0.66) precise; urgency=low

  * LanguageSelector/LangCache.py, tests/test_lang_cache.py: Drop some dead
    code.
  * data/pkg_depends: Install poppler-data for all languages. (LP: #893920)