@@ -8,6 +8,7 @@ language-selector (0.70) UNRELEASED; urgency=low
       Exception, value".
     - Use list comprehensions rather than filter.
     - Use new-style octal literals.
+    - Use str() rather than unicode() in Python 3.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 07 May 2012 16:13:22 +0100
 
